clean code via inspector

--- a/app/src/main/res/layout/activity_session_detail.xml
+++ b/app/src/main/res/layout/activity_session_detail.xml
@@ -24,22 +24,23 @@
             android:layout_width="match_parent"
             android:layout_marginBottom="0dp"
             android:layout_marginLeft="72dp"
+            android:layout_marginStart="72dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:text="Introdcution to WordPress"
             android:id="@+id/wc_detail_title"
             android:maxLines="4"
             android:ellipsize="end"
             android:textSize="18sp"
             android:lineSpacingMultiplier="1.1"
             android:textStyle="bold"
-            android:fontFamily="sans-serif"
             android:textColor="#deffffff" />
 
         <TextView android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_marginLeft="72dp"
+            android:layout_marginStart="72dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:text="28th Jan, 08:00 AM in Room"
             android:id="@+id/wc_detail_date"
             android:maxLines="2"
             android:ellipsize="end"
