--- a/app/src/main/res/layout/item_header_session.xml
+++ b/app/src/main/res/layout/item_header_session.xml
@@ -12,6 +12,7 @@
     <ImageView
         android:layout_marginTop="8dp"
         android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/line"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
@@ -20,7 +21,7 @@
         android:id="@+id/wc_detail_speaker_title"
         android:textColor="#E64A19"
         android:textSize="18sp"
-        android:text="Speakers"
+        android:text="@string/speaker_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
