--- a/app/src/main/res/layout/item_header_speaker.xml
+++ b/app/src/main/res/layout/item_header_speaker.xml
@@ -15,6 +15,7 @@
             android:layout_height="60dp"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:src="@drawable/wp_icon" />
 
         <TextView
@@ -22,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:textColor="@color/secondary_text_color"
             android:textSize="16sp" />
     </LinearLayout>
@@ -30,6 +32,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/line" />
 
@@ -38,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Sessions"
+        android:text="@string/session_title"
         android:textColor="#E64A19"
         android:textSize="18sp" />
 </LinearLayout>
