--- a/app/src/main/res/layout/item_session_by_speaker.xml
+++ b/app/src/main/res/layout/item_session_by_speaker.xml
@@ -6,6 +6,7 @@
 <TextView
     android:layout_centerVertical="true"
     android:layout_marginLeft="16dp"
+    android:layout_marginStart="16dp"
     android:layout_marginBottom="16dp"
     android:textSize="16sp"
     android:textColor="@color/accent_dark"
