--- a/app/src/main/res/layout/item_session_detail_speaker.xml
+++ b/app/src/main/res/layout/item_session_detail_speaker.xml
@@ -6,14 +6,17 @@
         android:src="@drawable/wp_icon"
         android:id="@+id/speaker_dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_centerVertical="true"
         android:layout_width="44dp"
         android:layout_height="44dp" />
     <TextView
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/speaker_dp"
+        android:layout_toEndOf="@+id/speaker_dp"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:textSize="16sp"
         android:textColor="@color/accent_dark"
         android:id="@+id/item_session_speaker"
