--- a/app/src/main/res/layout/my_wc_card.xml
+++ b/app/src/main/res/layout/my_wc_card.xml
@@ -39,7 +39,9 @@
                     android:layout_centerVertical="true"
                     android:orientation="vertical"
                     android:layout_toRightOf="@+id/wcIcon"
+                    android:layout_toEndOf="@+id/wcIcon"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                 <TextView
@@ -47,13 +49,10 @@
                     android:textColor="#ff575757"
                     android:id="@+id/up_wc_title"
                     android:layout_width="match_parent"
-                    android:text="WordCamp London"
                     android:layout_height="match_parent" />
                 <TextView
                     android:id="@+id/up_wc_dates"
                     android:textSize="12sp"
-                    android:layout_toRightOf="@+id/wcIcon"
-                    android:text="Jan 5- Jan 9"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
                 </LinearLayout>
