--- a/app/src/main/res/layout/upcoming_wc_card.xml
+++ b/app/src/main/res/layout/upcoming_wc_card.xml
@@ -32,6 +32,7 @@
                     android:layout_centerVertical="true"
                     android:orientation="vertical"
                     android:layout_toRightOf="@+id/wcIcon"
+                    android:layout_toEndOf="@+id/wcIcon"
                     android:layout_marginStart="12dp"
                     android:layout_marginLeft="12dp"
                     android:layout_width="wrap_content"
@@ -41,15 +42,14 @@
                     android:id="@+id/up_wc_title"
                     android:layout_width="match_parent"
                     android:layout_marginRight="34dp"
+                    android:layout_marginEnd="34dp"
                     android:maxLines="2"
                     android:textColor="@color/text_color"
-                    android:text="WordCamp London"
                     android:layout_height="match_parent" />
                 <TextView
                     android:id="@+id/up_wc_dates"
                     android:textSize="12sp"
                     android:textColor="#ff575757"
-                    android:layout_toRightOf="@+id/wcIcon"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
                 </LinearLayout>
@@ -59,6 +59,7 @@
                     android:paddingRight="16dp"
                     android:paddingLeft="16dp"
                     android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:src="@drawable/ic_bookmark_outline_grey600_24dp"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent" />
