decrease the list item height for custom sessions

--- a/app/src/main/res/layout/header_time_session.xml
+++ b/app/src/main/res/layout/header_time_session.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="#fff"
+    android:background="#beffffff"
     android:paddingLeft="16dp"
     android:paddingStart="16dp"
     android:layout_height="48dp">
