--- a/app/src/main/res/layout/fragment_wcdetails_overview.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_overview.xml
@@ -1,87 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<org.wordcamp.widgets.MaterialScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#fff"
-    android:overScrollMode="never">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/wc_image_container"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/featuredImage"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:scaleType="fitXY"
-                android:src="@drawable/wclondon" />
-        </LinearLayout>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/card_view"
+        <org.wordcamp.widgets.MaterialScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="8dp"
-
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="-56dp"
-            card_view:cardCornerRadius="2dp"
-            card_view:cardElevation="8dp">
+            android:background="#fff"
+            android:overScrollMode="never">
 
             <LinearLayout
-                android:id="@+id/centerLayoutDetail"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:background="#fff"
-                android:orientation="vertical"
-                android:padding="8dp">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/wc_loc_header"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:id="@+id/wc_image_container"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:text="@string/wc_location"
-                    android:textColor="@color/flat_green_dark"
-                    android:textSize="20sp" />
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/wc_location"
+                    <ImageView
+                        android:id="@+id/featuredImage"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/wclondon" />
+                </LinearLayout>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_view"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:textColor="@color/text_color"
-                    android:textSize="16sp" />
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="8dp"
 
-                <TextView
-                    android:id="@+id/wc_about_header"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:text="@string/wc_about"
-                    android:textColor="@color/flat_blue_dark"
-                    android:textSize="20sp" />
+                    android:layout_marginRight="8dp"
+                    android:layout_marginTop="-56dp"
+                    card_view:cardCornerRadius="2dp"
+                    card_view:cardElevation="8dp">
 
-                <TextView
-                    android:id="@+id/wc_about"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
-                    android:textColor="@color/text_color"
-                    android:textSize="16sp" />
+                    <LinearLayout
+                        android:id="@+id/centerLayoutDetail"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#fff"
+                        android:orientation="vertical"
+                        android:padding="8dp">
 
+                        <TextView
+                            android:id="@+id/wc_loc_header"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:text="@string/wc_location"
+                            android:textColor="@color/flat_green_dark"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/wc_location"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="16dp"
+                            android:textColor="@color/text_color"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/wc_about_header"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:text="@string/wc_about"
+                            android:textColor="@color/flat_blue_dark"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/wc_about"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="16dp"
+                            android:textColor="@color/text_color"
+                            android:textSize="16sp" />
+
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
             </LinearLayout>
-        </android.support.v7.widget.CardView>
-    </LinearLayout>
-</org.wordcamp.widgets.MaterialScrollView>
+        </org.wordcamp.widgets.MaterialScrollView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+</LinearLayout>
