add WCs those are only for 1 days + add directions to the venue

--- a/app/src/main/res/layout/fragment_wcdetails_overview.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_overview.xml
@@ -23,6 +23,7 @@
                 <LinearLayout
                     android:id="@+id/wc_image_container"
                     android:layout_width="fill_parent"
+                    android:visibility="gone"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
@@ -30,8 +31,7 @@
                         android:id="@+id/featuredImage"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/wclondon" />
+                        android:scaleType="fitStart" />
                 </LinearLayout>
 
                 <android.support.v7.widget.CardView
@@ -41,9 +41,9 @@
                     android:layout_marginLeft="8dp"
 
                     android:layout_marginRight="8dp"
-                    android:layout_marginTop="-56dp"
+                    android:layout_marginTop="16dp"
                     card_view:cardCornerRadius="2dp"
-                    card_view:cardElevation="8dp">
+                    card_view:cardElevation="2dp">
 
                     <LinearLayout
                         android:id="@+id/centerLayoutDetail"
@@ -60,7 +60,7 @@
                             android:clickable="true"
                             android:focusable="true"
                             android:text="@string/wc_location"
-                            android:textColor="@color/flat_green_dark"
+                            android:textColor="@color/accent_material_light"
                             android:textSize="20sp" />
 
                         <TextView
@@ -85,9 +85,38 @@
                             android:id="@+id/wc_about"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="16dp"
                             android:textColor="@color/text_color"
                             android:textSize="16sp" />
+
+                        <ImageView
+                            android:layout_width="fill_parent"
+                            android:background="@drawable/divider"
+                            android:layout_marginBottom="16dp"
+                            android:layout_height="1dp" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:orientation="horizontal"
+                            android:padding="16dp"
+                            android:background="@drawable/highlight"
+                            android:id="@+id/maps_cotainer"
+                            android:layout_height="wrap_content">
+                            <ImageView
+                                android:src="@drawable/ic_directions_car_24dp"
+                                android:layout_width="wrap_content"
+                                android:layout_marginRight="16dp"
+                                android:layout_marginEnd="16dp"
+                                android:layout_height="wrap_content" />
+
+                            <TextView
+                                android:id="@+id/maps_text"
+                                android:text="@string/map_directions"
+                                android:textSize="16sp"
+                                android:textColor="@color/accent_material_light"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" />
+
+                        </LinearLayout>
 
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
