handle insertConflict and linkify the speaker info text

--- a/app/src/main/res/layout/item_header_speaker.xml
+++ b/app/src/main/res/layout/item_header_speaker.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
+            android:autoLink="all"
             android:layout_marginStart="16dp"
             android:textColor="@color/secondary_text_color"
             android:textSize="16sp" />
