--- a/app/src/main/res/layout/fragment_wcdetails_speaker.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_speaker.xml
@@ -9,6 +9,7 @@
         android:layout_centerInParent="true"
         android:textColor="@color/secondary_text_color"
         android:text="@string/speaker_to_be_announced"
+        android:gravity="center"
         android:textSize="25sp"
         android:visibility="gone" />
 
