--- a/app/src/main/res/layout/item_session_by_speaker.xml
+++ b/app/src/main/res/layout/item_session_by_speaker.xml
@@ -9,7 +9,7 @@
     android:layout_marginStart="16dp"
     android:layout_marginBottom="16dp"
     android:textSize="16sp"
-    android:textColor="@color/accent_dark"
+    android:textColor="@color/text_color_dark"
     android:id="@+id/item_session"
     android:maxLines="2"
     android:ellipsize="end"
