--- a/app/src/main/res/layout/item_session_detail_speaker.xml
+++ b/app/src/main/res/layout/item_session_detail_speaker.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="48dp">
+    android:layout_width="match_parent"
+    android:layout_height="48dp"
+    android:orientation="vertical">
+
     <org.wordcamp.widgets.CircularImageView
-        android:src="@drawable/wp_icon"
         android:id="@+id/speaker_dp"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
-        android:layout_centerVertical="true"
-        android:layout_width="44dp"
-        android:layout_height="44dp" />
+        android:src="@drawable/wp_icon" />
+
     <TextView
+        android:id="@+id/item_session_speaker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/speaker_dp"
-        android:layout_toEndOf="@+id/speaker_dp"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
-        android:textSize="16sp"
-        android:textColor="@color/accent_dark"
-        android:id="@+id/item_session_speaker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_toEndOf="@+id/speaker_dp"
+        android:layout_toRightOf="@+id/speaker_dp"
+        android:textColor="@color/text_color_dark"
+        android:textSize="16sp" />
 </RelativeLayout>
