--- a/app/src/main/res/menu/menu_base_act.xml
+++ b/app/src/main/res/menu/menu_base_act.xml
@@ -1,15 +1,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".BaseActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".BaseActivity">
     <item
         android:id="@+id/search_wc"
         android:icon="@drawable/ic_search_white_24dp"
         android:title="@string/action_search"
-        app:showAsAction="collapseActionView|always"
-        app:actionViewClass="android.support.v7.widget.SearchView"/>
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="collapseActionView|always" />
 
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
-    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
-        android:orderInCategory="1" app:showAsAction="never" />
+    <item
+        android:id="@+id/action_feedback"
+        android:orderInCategory="100"
+        android:title="@string/action_feedback"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_refresh"
+        android:orderInCategory="1"
+        android:title="@string/action_refresh"
+        app:showAsAction="never" />
 </menu>
