--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="accent">#e91e63</color>
-    <color name="accent_dark">#c0392b</color>
+    <color name="accent_dark">#e91e63</color>
     <color name="text_color">#ff313131</color>
+    <color name="text_color_dark">#c0392b</color>
     <color name="secondary_text_color">#727272</color>
     <color name="hint_text_color">#B8B8B8</color>
     <color name="flat_blue">#3498db</color>
