--- a/app/src/main/res/layout/my_wc_card.xml
+++ b/app/src/main/res/layout/my_wc_card.xml
@@ -1,61 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginBottom="2dp"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
-    android:layout_marginBottom="2dp"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/card_view"
-            android:layout_gravity="center"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        card_view:cardCornerRadius="4dp">
+
+        <RelativeLayout
+            android:id="@+id/layoutContainer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            card_view:cardCornerRadius="4dp" >
+            android:layout_height="match_parent">
 
-            <RelativeLayout
-                android:id="@+id/layoutContainer"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/wcIcon"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_centerVertical="true"
+                android:padding="5dp" />
 
-                <ImageView
-                    android:src="@drawable/wp_icon"
-                    android:id="@+id/wcIcon"
-                    android:layout_centerVertical="true"
-                    android:padding="5dp"
-                    android:layout_width="56dp"
-                    android:layout_height="56dp" />
-                <ImageView
-                    android:src="@drawable/ic_delete_white_48dp"
-                    android:id="@+id/wcDelete"
-                    android:visibility="gone"
-                    android:background="@drawable/red_delete_background"
-                    android:layout_centerVertical="true"
-                    android:padding="10dp"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp" />
-                <LinearLayout
-                    android:layout_centerVertical="true"
-                    android:orientation="vertical"
-                    android:layout_toRightOf="@+id/wcIcon"
-                    android:layout_toEndOf="@+id/wcIcon"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/wcDelete"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerVertical="true"
+                android:background="@drawable/red_delete_background"
+                android:padding="10dp"
+                android:src="@drawable/ic_delete_white_48dp"
+                android:visibility="gone" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@+id/wcIcon"
+                android:layout_toRightOf="@+id/wcIcon"
+                android:orientation="vertical">
+
                 <TextView
-                    android:textSize="16sp"
-                    android:textColor="#ff575757"
                     android:id="@+id/up_wc_title"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:textColor="#ff575757"
+                    android:textSize="16sp" />
+
                 <TextView
                     android:id="@+id/up_wc_dates"
-                    android:textSize="12sp"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-                </LinearLayout>
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
+                    android:layout_height="match_parent"
+                    android:textSize="12sp" />
+            </LinearLayout>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
