--- a/app/src/main/res/layout/upcoming_wc_card.xml
+++ b/app/src/main/res/layout/upcoming_wc_card.xml
@@ -1,68 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginBottom="2dp"
     android:layout_marginLeft="4dp"
     android:layout_marginRight="4dp"
-    android:layout_marginBottom="2dp"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/card_view"
-            android:layout_gravity="center"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        card_view:cardCornerRadius="4dp">
+
+        <RelativeLayout
+            android:id="@+id/layoutContainer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            card_view:cardCornerRadius="4dp" >
+            android:layout_height="match_parent">
 
-            <RelativeLayout
-                android:id="@+id/layoutContainer"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/wcIcon"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
+                android:padding="4dp" />
 
-                <ImageView
-                    android:src="@drawable/wp_icon"
-                    android:id="@+id/wcIcon"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginLeft="12dp"
-                    android:layout_centerVertical="true"
-                    android:padding="4dp"
-                    android:layout_width="56dp"
-                    android:layout_height="56dp" />
-                <LinearLayout
-                    android:layout_centerVertical="true"
-                    android:orientation="vertical"
-                    android:layout_toRightOf="@+id/wcIcon"
-                    android:layout_toEndOf="@+id/wcIcon"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginLeft="12dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
+                android:layout_toEndOf="@+id/wcIcon"
+                android:layout_toRightOf="@+id/wcIcon"
+                android:orientation="vertical">
+
                 <TextView
-                    android:textSize="16sp"
                     android:id="@+id/up_wc_title"
                     android:layout_width="match_parent"
-                    android:layout_marginRight="34dp"
+                    android:layout_height="match_parent"
                     android:layout_marginEnd="34dp"
+                    android:layout_marginRight="34dp"
                     android:maxLines="2"
                     android:textColor="@color/text_color"
-                    android:layout_height="match_parent" />
+                    android:textSize="16sp" />
+
                 <TextView
                     android:id="@+id/up_wc_dates"
-                    android:textSize="12sp"
-                    android:textColor="#ff575757"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-                </LinearLayout>
-                <ImageView
-                    android:id="@+id/bookmark"
-                    android:paddingBottom="16dp"
-                    android:paddingRight="16dp"
-                    android:paddingLeft="16dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:src="@drawable/ic_bookmark_outline_grey600_24dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
+                    android:layout_height="match_parent"
+                    android:textColor="#ff575757"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+            <ImageView
+                android:id="@+id/bookmark"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:paddingBottom="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:src="@drawable/ic_bookmark_outline_grey600_24dp" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
