--- a/app/src/main/res/layout/my_wc_card.xml
+++ b/app/src/main/res/layout/my_wc_card.xml
@@ -25,7 +25,9 @@
                 android:layout_width="56dp"
                 android:layout_height="56dp"
                 android:layout_centerVertical="true"
-                android:padding="5dp" />
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
+                android:padding="4dp" />
 
             <ImageView
                 android:id="@+id/wcDelete"
@@ -35,6 +37,8 @@
                 android:background="@drawable/red_delete_background"
                 android:padding="10dp"
                 android:src="@drawable/ic_delete_white_48dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginStart="12dp"
                 android:visibility="gone" />
 
             <LinearLayout
