--- a/app/src/main/res/layout/item_wordcamp.xml
+++ b/app/src/main/res/layout/item_wordcamp.xml
@@ -60,13 +60,12 @@
             <ImageView
                 android:id="@+id/bookmark"
                 android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
+                android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:paddingBottom="16dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"
-                android:src="@drawable/ic_bookmark_outline_grey600_24dp" />
+                android:src="@drawable/ic_bookmark_outline_grey600_24dp"
+                android:layout_centerVertical="true"
+                android:padding="16dp"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
