--- a/app/src/main/res/layout/activity_wordcamp_detail.xml
+++ b/app/src/main/res/layout/activity_wordcamp_detail.xml
@@ -60,10 +60,10 @@
 
         </android.support.v7.widget.Toolbar>
 
-        <org.wordcamp.widgets.SlidingTabLayout
+        <android.support.design.widget.TabLayout
             android:id="@+id/sliding_tabs"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/tab_height" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </FrameLayout>
