--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,7 @@
     <color name="dividers">#DBDBDB</color>
     <color name="tab_normal_text">#beffffff</color>
     <color name="tab_selected_text">#fff</color>
+    <color name="swipe_refresh_color1">#3F51B5</color>
+    <color name="swipe_refresh_color2">#FF4081</color>
+    <color name="swipe_refresh_color3">#9C27B0</color>
 </resources>
