--- a/app/src/main/res/layout/activity_wordcamp_detail.xml
+++ b/app/src/main/res/layout/activity_wordcamp_detail.xml
@@ -45,7 +45,7 @@
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:singleLine="true"
-                    android:textSize="20sp" />
+                    android:textSize="@dimen/title_text_size" />
 
                 <TextView
                     android:id="@+id/sub_title"
@@ -55,7 +55,7 @@
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:singleLine="true"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/regular_text_size" />
             </LinearLayout>
 
         </android.support.v7.widget.Toolbar>
