--- a/app/src/main/res/layout/fragment_my_wc.xml
+++ b/app/src/main/res/layout/fragment_my_wc.xml
@@ -10,7 +10,7 @@
         android:layout_centerInParent="true"
         android:text="@string/empty_mywordcamps"
         android:textColor="@color/secondary_text_color"
-        android:textSize="25sp"
+        android:textSize="@dimen/empty_view_text_size"
         android:visibility="gone" />
 
     <android.support.v4.widget.SwipeRefreshLayout
@@ -22,7 +22,7 @@
             android:id="@+id/scroll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="@dimen/small_top_margin"
             android:divider="@null"
             android:scrollbars="vertical" />
     </android.support.v4.widget.SwipeRefreshLayout>
