--- a/app/src/main/res/layout/fragment_upcoming_wc.xml
+++ b/app/src/main/res/layout/fragment_upcoming_wc.xml
@@ -1,13 +1,13 @@
-<android.support.v4.widget.SwipeRefreshLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <ListView
         android:id="@+id/scroll"
-        android:divider="@null"
-        android:layout_marginTop="2dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/small_top_margin"
+        android:divider="@null"
         android:scrollbars="vertical" />
 </android.support.v4.widget.SwipeRefreshLayout>
