--- a/app/src/main/res/layout/fragment_wcdetails_overview.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_overview.xml
@@ -23,9 +23,9 @@
                 <LinearLayout
                     android:id="@+id/wc_image_container"
                     android:layout_width="fill_parent"
-                    android:visibility="gone"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <ImageView
                         android:id="@+id/featuredImage"
@@ -38,10 +38,10 @@
                     android:id="@+id/card_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginLeft="@dimen/margin_8dp"
 
-                    android:layout_marginRight="8dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="@dimen/margin_8dp"
+                    android:layout_marginTop="@dimen/margin_16dp"
                     card_view:cardCornerRadius="2dp"
                     card_view:cardElevation="2dp">
 
@@ -51,7 +51,7 @@
                         android:layout_height="wrap_content"
                         android:background="#fff"
                         android:orientation="vertical"
-                        android:padding="8dp">
+                        android:padding="@dimen/padding_8dp">
 
                         <TextView
                             android:id="@+id/wc_loc_header"
@@ -61,15 +61,15 @@
                             android:focusable="true"
                             android:text="@string/wc_location"
                             android:textColor="@color/accent_material_light"
-                            android:textSize="20sp" />
+                            android:textSize="@dimen/title_text_size" />
 
                         <TextView
                             android:id="@+id/wc_location"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="16dp"
+                            android:layout_marginBottom="@dimen/margin_16dp"
                             android:textColor="@color/text_color"
-                            android:textSize="16sp" />
+                            android:textSize="@dimen/regular_text_size" />
 
                         <TextView
                             android:id="@+id/wc_about_header"
@@ -79,42 +79,43 @@
                             android:focusable="true"
                             android:text="@string/wc_about"
                             android:textColor="@color/flat_blue_dark"
-                            android:textSize="20sp" />
+                            android:textSize="@dimen/title_text_size" />
 
                         <TextView
                             android:id="@+id/wc_about"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@color/text_color"
-                            android:textSize="16sp" />
+                            android:textSize="@dimen/regular_text_size" />
 
                         <ImageView
                             android:layout_width="fill_parent"
-                            android:background="@drawable/divider"
-                            android:layout_marginBottom="16dp"
-                            android:layout_height="1dp" />
+                            android:layout_height="1dp"
+                            android:layout_marginBottom="@dimen/margin_16dp"
+                            android:background="@drawable/divider" />
 
                         <LinearLayout
-                            android:layout_width="match_parent"
-                            android:orientation="horizontal"
-                            android:padding="16dp"
-                            android:background="@drawable/highlight"
                             android:id="@+id/maps_cotainer"
-                            android:layout_height="wrap_content">
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/highlight"
+                            android:orientation="horizontal"
+                            android:padding="@dimen/margin_16dp">
+
                             <ImageView
-                                android:src="@drawable/ic_directions_car_24dp"
                                 android:layout_width="wrap_content"
-                                android:layout_marginRight="16dp"
-                                android:layout_marginEnd="16dp"
-                                android:layout_height="wrap_content" />
+                                android:layout_height="wrap_content"
+                                android:layout_marginEnd="@dimen/margin_16dp"
+                                android:layout_marginRight="@dimen/margin_16dp"
+                                android:src="@drawable/ic_directions_car_24dp" />
 
                             <TextView
                                 android:id="@+id/maps_text"
-                                android:text="@string/map_directions"
-                                android:textSize="16sp"
-                                android:textColor="@color/accent_material_light"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content" />
+                                android:layout_height="wrap_content"
+                                android:text="@string/map_directions"
+                                android:textColor="@color/accent_material_light"
+                                android:textSize="@dimen/regular_text_size" />
 
                         </LinearLayout>
 
