--- a/app/src/main/res/layout/item_session_by_speaker.xml
+++ b/app/src/main/res/layout/item_session_by_speaker.xml
@@ -10,9 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="@dimen/margin_16dp"
-        android:layout_marginLeft="@dimen/margin_16dp"
-        android:layout_marginStart="@dimen/margin_16dp"
+        android:layout_marginBottom="@dimen/side_margin"
+        android:layout_marginLeft="@dimen/side_margin"
+        android:layout_marginStart="@dimen/side_margin"
         android:ellipsize="end"
         android:maxLines="2"
         android:textColor="@color/text_color_dark"
