--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -21,7 +21,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_16dp"
+            android:layout_margin="@dimen/side_margin"
             android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
@@ -42,7 +42,7 @@
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_16dp">
+                android:layout_marginTop="@dimen/side_margin">
 
                 <EditText
                     android:id="@+id/descrFeedback"
@@ -58,7 +58,7 @@
                 android:id="@+id/bugSwitch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_16dp"
+                android:layout_marginTop="@dimen/side_margin"
                 android:text="@string/bug"
                 android:textSize="@dimen/text_size_18sp" />
 
