--- a/app/src/main/res/layout/fragment_wcdetails_overview.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_overview.xml
@@ -39,9 +39,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/margin_8dp"
-
                     android:layout_marginRight="@dimen/margin_8dp"
-                    android:layout_marginTop="@dimen/margin_16dp"
+                    android:layout_marginTop="@dimen/side_margin"
                     card_view:cardCornerRadius="2dp"
                     card_view:cardElevation="2dp">
 
@@ -51,7 +50,7 @@
                         android:layout_height="wrap_content"
                         android:background="#fff"
                         android:orientation="vertical"
-                        android:padding="@dimen/padding_8dp">
+                        android:padding="@dimen/wc_overview_center_padding">
 
                         <TextView
                             android:id="@+id/wc_loc_header"
@@ -67,7 +66,7 @@
                             android:id="@+id/wc_location"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/margin_16dp"
+                            android:layout_marginBottom="@dimen/side_margin"
                             android:textColor="@color/text_color"
                             android:textSize="@dimen/regular_text_size" />
 
@@ -91,7 +90,7 @@
                         <ImageView
                             android:layout_width="fill_parent"
                             android:layout_height="1dp"
-                            android:layout_marginBottom="@dimen/margin_16dp"
+                            android:layout_marginBottom="@dimen/side_margin"
                             android:background="@drawable/divider" />
 
                         <LinearLayout
@@ -100,13 +99,13 @@
                             android:layout_height="wrap_content"
                             android:background="@drawable/highlight"
                             android:orientation="horizontal"
-                            android:padding="@dimen/margin_16dp">
+                            android:padding="@dimen/side_margin">
 
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginEnd="@dimen/margin_16dp"
-                                android:layout_marginRight="@dimen/margin_16dp"
+                                android:layout_marginEnd="@dimen/side_margin"
+                                android:layout_marginRight="@dimen/side_margin"
                                 android:src="@drawable/ic_directions_car_24dp" />
 
                             <TextView
