--- a/app/src/main/res/layout/item_header_session.xml
+++ b/app/src/main/res/layout/item_header_session.xml
@@ -15,8 +15,8 @@
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/margin_16dp"
-        android:layout_marginRight="@dimen/margin_16dp"
+        android:layout_marginEnd="@dimen/side_margin"
+        android:layout_marginRight="@dimen/side_margin"
         android:layout_marginTop="@dimen/margin_8dp"
         android:background="@drawable/line" />
 
@@ -24,7 +24,7 @@
         android:id="@+id/wc_detail_speaker_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_16dp"
+        android:layout_marginTop="@dimen/side_margin"
         android:text="@string/speaker_title"
         android:textColor="@color/wc_detail_title"
         android:textSize="@dimen/text_size_18sp" />
