--- a/app/src/main/res/layout/item_session.xml
+++ b/app/src/main/res/layout/item_session.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/item_session_container"
     android:layout_width="match_parent"
-    android:layout_height="72dp"
-    android:background="#fff">
+    android:layout_height="@dimen/list_item_session_height"
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -12,8 +12,8 @@
         android:layout_marginEnd="56dp"
         android:layout_marginRight="56dp"
         android:orientation="vertical"
-        android:paddingLeft="@dimen/margin_16dp"
-        android:paddingStart="@dimen/margin_16dp">
+        android:paddingLeft="@dimen/padding_16dp"
+        android:paddingStart="@dimen/padding_16dp">
 
         <TextView
             android:id="@+id/titleSession"
