--- a/app/src/main/res/layout/item_wordcamp.xml
+++ b/app/src/main/res/layout/item_wordcamp.xml
@@ -25,16 +25,16 @@
                 android:layout_width="@dimen/item_wc_icon_size"
                 android:layout_height="@dimen/item_wc_icon_size"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/margin_12dp"
-                android:layout_marginStart="@dimen/margin_12dp"
+                android:layout_marginLeft="@dimen/list_item_wc_margin"
+                android:layout_marginStart="@dimen/list_item_wc_margin"
                 android:padding="4dp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/margin_12dp"
-                android:layout_marginStart="@dimen/margin_12dp"
+                android:layout_marginLeft="@dimen/list_item_wc_margin"
+                android:layout_marginStart="@dimen/list_item_wc_margin"
                 android:layout_toEndOf="@+id/wcIcon"
                 android:layout_toRightOf="@+id/wcIcon"
                 android:orientation="vertical">
@@ -43,8 +43,8 @@
                     android:id="@+id/up_wc_title"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginEnd="@dimen/margin_34dp"
-                    android:layout_marginRight="@dimen/margin_34dp"
+                    android:layout_marginEnd="@dimen/list_item_wc_title_margin"
+                    android:layout_marginRight="@dimen/list_item_wc_title_margin"
                     android:maxLines="2"
                     android:textColor="@color/text_color"
                     android:textSize="@dimen/regular_text_size" />
@@ -64,7 +64,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:padding="@dimen/margin_16dp"
+                android:padding="@dimen/list_item_bookmark_padding"
                 android:src="@drawable/ic_bookmark_outline_grey600_24dp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
