--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,20 +4,21 @@
     <dimen name="list_elevation">8dp</dimen>
     <dimen name="single_line_list_item">24dp</dimen>
     <dimen name="double_line_list_item">72dp</dimen>
-    <dimen name="margin_16dp">16dp</dimen>
-    <dimen name="large_margin_72dp">72dp</dimen>
+    <dimen name="side_margin">16dp</dimen>
+    <dimen name="large_margin">72dp</dimen>
     <dimen name="small_top_margin">2dp</dimen>
-    <dimen name="padding_8dp">8dp</dimen>
+    <dimen name="wc_overview_center_padding">8dp</dimen>
     <dimen name="padding_16dp">16dp</dimen>
     <dimen name="margin_8dp">8dp</dimen>
     <dimen name="header_time_height">48dp</dimen>
-    <dimen name="margin_10dp">10dp</dimen>
+    <dimen name="list_item_header_speaker_dp_margin">10dp</dimen>
     <dimen name="speaker_dp_size">60dp</dimen>
     <dimen name="session_detail_speaker_dp_size">44dp</dimen>
     <dimen name="item_session_height">48dp</dimen>
     <dimen name="item_wc_icon_size">56dp</dimen>
-    <dimen name="margin_12dp">12dp</dimen>
-    <dimen name="margin_34dp">34dp</dimen>
+    <dimen name="list_item_wc_margin">12dp</dimen>
+    <dimen name="list_item_wc_title_margin">34dp</dimen>
+    <dimen name="list_item_session_height">72dp</dimen>
 
     <dimen name="wc_date_title_text">12sp</dimen>
     <dimen name="medium_text_size">14sp</dimen>
@@ -25,5 +26,6 @@
     <dimen name="text_size_18sp">18sp</dimen>
     <dimen name="title_text_size">20sp</dimen>
     <dimen name="empty_view_text_size">25sp</dimen>
+    <dimen name="list_item_bookmark_padding">16dp</dimen>
 
 </resources>
