--- a/app/src/main/res/layout/item_header_session.xml
+++ b/app/src/main/res/layout/item_header_session.xml
@@ -8,7 +8,7 @@
         android:id="@+id/wc_detail_abstract"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_marginTop="@dimen/medium_margin"
         android:textColor="@color/secondary_text_color"
         android:textSize="@dimen/regular_text_size" />
 
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/side_margin"
         android:layout_marginRight="@dimen/side_margin"
-        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_marginTop="@dimen/medium_margin"
         android:background="@drawable/line" />
 
     <TextView
