--- a/app/src/main/res/layout/item_header_speaker.xml
+++ b/app/src/main/res/layout/item_header_speaker.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/side_margin"
         android:layout_marginRight="@dimen/side_margin"
-        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_marginTop="@dimen/medium_margin"
         android:background="@drawable/line" />
 
     <TextView
