--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,8 +8,8 @@
     <dimen name="large_margin">72dp</dimen>
     <dimen name="small_top_margin">2dp</dimen>
     <dimen name="wc_overview_center_padding">8dp</dimen>
-    <dimen name="padding_16dp">16dp</dimen>
-    <dimen name="margin_8dp">8dp</dimen>
+    <dimen name="normal_padding">16dp</dimen>
+    <dimen name="medium_margin">8dp</dimen>
     <dimen name="header_time_height">48dp</dimen>
     <dimen name="list_item_header_speaker_dp_margin">10dp</dimen>
     <dimen name="speaker_dp_size">60dp</dimen>
