use proper naming conventions; fixes #10

--- a/app/src/main/res/layout/fragment_wcdetails_overview.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_overview.xml
@@ -112,7 +112,7 @@
                                 android:id="@+id/maps_text"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/map_directions"
+                                android:text="@string/map_directions_text"
                                 android:textColor="@color/accent_material_light"
                                 android:textSize="@dimen/regular_text_size" />
 
