--- a/app/src/main/res/menu/menu_session_detail.xml
+++ b/app/src/main/res/menu/menu_session_detail.xml
@@ -3,11 +3,11 @@
     <item
         android:id="@+id/action_favorite"
         android:icon="@drawable/ic_favorite_outline_white_36dp"
-        android:title="@string/favorite"
+        android:title="@string/action_favorite"
         app:showAsAction="always" />
     <item
         android:id="@+id/item_menu_website"
         android:orderInCategory="50"
-        android:title="@string/webversion"
+        android:title="@string/action_webversion"
         app:showAsAction="never" />
 </menu>
