--- a/app/src/main/res/menu/menu_wc_speaker.xml
+++ b/app/src/main/res/menu/menu_wc_speaker.xml
@@ -3,6 +3,6 @@
     <item
         android:id="@+id/item_menu_website"
         android:orderInCategory="50"
-        android:title="@string/webversion"
+        android:title="@string/action_webversion"
         app:showAsAction="never" />
 </menu>
