--- a/app/src/main/res/layout/item_header_speaker.xml
+++ b/app/src/main/res/layout/item_header_speaker.xml
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/side_margin"
-        android:text="@string/session_title"
+        android:text="@string/title_sessions"
         android:textColor="@color/wc_detail_title"
         android:textSize="@dimen/text_size_18sp" />
 </LinearLayout>
