--- a/app/src/main/res/menu/menu_feedback.xml
+++ b/app/src/main/res/menu/menu_feedback.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/sendFeedback"
         android:icon="@drawable/ic_send_white_24dp"
-        android:title="@string/send"
+        android:title="@string/action_send"
         app:showAsAction="always"/>
 </menu>
